--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^4.0.0",
+    "@electron/remote": "^2.1.2",
     "electron-updater": "^6.3.9"
   },
   "devDependencies": {
